--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^36.2.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
