--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "stimatucil3",
+  "name": "rush-hour-solver",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Rush Hour puzzle solver with GUI using Electron",
+  "main": "src/main.js",
+  "scripts": {
+    "start": "electron .",
+    "dev": "electron ."
+  },
+  "author": "Your Name",
+  "license": "ISC",
   "directories": {
     "doc": "doc",
     "test": "test"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "electron": "^36.2.0"
-  },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "js-priority-queue": "^0.1.5"
+    "js-priority-queue": "^0.1.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
+    "electron": "^36.2.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
+    "tailwindcss-cli": "^0.1.2",
+    "vite": "^6.3.5"
   }
 }
